feat: complete screen to sync with partner
